--- a/jiffy/pom.xml
+++ b/jiffy/pom.xml
@@ -60,7 +60,7 @@
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
 		<version>1.18.36</version>
-		<scope>provided</scope>
+		<scope>compile</scope>
 	</dependency>
 
     
@@ -78,6 +78,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
