--- a/jiffy/src/main/resources/application.yml
+++ b/jiffy/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/jiffy  # Ensure 'jiffy' database exists
-    username: root
-    password: Peileen@24
+    username: eva
+    password: evajo812
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
